# practicing-Svelte

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Project_Horizon_Chat_Summary.md  Project_Horizon_Scope_Document_v2.2.docx  README.md  docker-compose.yml  project-horizon-execution-plan-v1.4-final.docx  pyproject.toml  pytest.ini  requirements.txt
apps/: urls.py
apps/accounts/: admin.py  apps.py  models.py  signals.py
apps/activities/: apps.py  models.py
apps/common/: __init__.py  factories.py
apps/contacts/: admin.py  apps.py  models.py  services.py
apps/deals/: admin.py  apps.py  models.py  services.py
config/: __init__.py  asgi.py  celery.py  settings.py  settings_base.py  settings_dev.py  settings_prod.py  urls.py  wsgi.py
fixtures/: initial_data.json
tests/: __init__.py  conftest.py
